[project]
name = "linkedinto"
version = "0.0.0"
description = "Convert LinkedIn export ZIP to other formats e.g. JSON Resume and RenderCV"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Brendan Carpio", email = "bfcarpio.git@mailgw.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: News/Diary",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rendercv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "syrupy>=4.0",
]

[project.scripts]
linkedinto = "linkedinto.cli:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
all = "error"

[tool.pytest]
testpaths = ["tests"]
